; ModuleID = '/home/carl/AnghaBench/mimikatz/mimikatz/modules/dpapi/extr_kuhl_m_dpapi_oe.c_kuhl_m_dpapi_oe_credentials_descr.c'
source_filename = "/home/carl/AnghaBench/mimikatz/mimikatz/modules/dpapi/extr_kuhl_m_dpapi_oe.c_kuhl_m_dpapi_oe_credentials_descr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i64 }
%struct.TYPE_6__ = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { i64 }

@gDPAPI_Credentials = common dso_local global %struct.TYPE_7__ zeroinitializer, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @kuhl_m_dpapi_oe_credentials_descr() #0 {
  %1 = alloca %struct.TYPE_6__*, align 8
  %2 = load i64, i64* getelementptr inbounds (%struct.TYPE_7__, %struct.TYPE_7__* @gDPAPI_Credentials, i32 0, i32 0), align 8
  %3 = inttoptr i64 %2 to %struct.TYPE_6__*
  store %struct.TYPE_6__* %3, %struct.TYPE_6__** %1, align 8
  br label %4

4:                                                ; preds = %10, %0
  %5 = load %struct.TYPE_6__*, %struct.TYPE_6__** %1, align 8
  %6 = icmp ne %struct.TYPE_6__* %5, bitcast (%struct.TYPE_7__* @gDPAPI_Credentials to %struct.TYPE_6__*)
  br i1 %6, label %7, label %16

7:                                                ; preds = %4
  %8 = load %struct.TYPE_6__*, %struct.TYPE_6__** %1, align 8
  %9 = call i32 @kuhl_m_dpapi_oe_credential_descr(%struct.TYPE_6__* %8)
  br label %10

10:                                               ; preds = %7
  %11 = load %struct.TYPE_6__*, %struct.TYPE_6__** %1, align 8
  %12 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %11, i32 0, i32 0
  %13 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = inttoptr i64 %14 to %struct.TYPE_6__*
  store %struct.TYPE_6__* %15, %struct.TYPE_6__** %1, align 8
  br label %4

16:                                               ; preds = %4
  ret void
}

declare dso_local i32 @kuhl_m_dpapi_oe_credential_descr(%struct.TYPE_6__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
